added credits for for translators

--- a/KN_Core/Resources/Locale/ru.xml
+++ b/KN_Core/Resources/Locale/ru.xml
@@ -41,6 +41,7 @@
   <key id="about4" value="trbflxr#8814 или John Sawyer#6915"/>
   <key id="about5" value="или в дискорде мода (кнопка сверху)"/>
   <key id="about6" value="Так же большое спасибо игроками Cursed, MRo и diip за их поддержку!"/>
+  <key id="about7" value="Мод перевели: John Sawyer (RU), Nawax (FR)"/>
   <key id="about0v" value="Ваша версия игры не соответсвует версии мода!"/>
   <key id="about1v" value="Пожалуйста, скачайте новую версию KiNO мода"/>
   <key id="about2v" value="из оффицального дискорда (кнопка сверху)"/>
