--- a/KN_Core/Resources/Locale/fr.xml
+++ b/KN_Core/Resources/Locale/fr.xml
@@ -41,6 +41,7 @@
   <key id="about4" value="trbflxr#8814 ou John Sawyer#6915"/>
   <key id="about5" value="ou sur le discord du mod (boutton du haut)"/>
   <key id="about6" value="Merci également à Cursed, MRo et diip pour leur soutien !"/>
+  <key id="about7" value="Mod traduit par: John Sawyer (RU), Nawax (FR)"/>
   <key id="about0v" value="Votre version de client CarX est différente !"/>
   <key id="about1v" value="Veuillez télécharger la nouvelle version du mod KiNO"/>
   <key id="about2v" value="sur le discord officiel (boutton du haut)"/>
