--- a/KN_Core/Resources/Locale/pl.xml
+++ b/KN_Core/Resources/Locale/pl.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<locale loc="pl">
+<locale loc="pl" author="Sleepy">
   <!--MODS (TABS)-->
   <key id="lights" value="LIGHTS"/>
   <key id="visuals" value="VISUALS"/>
@@ -41,7 +41,7 @@
   <key id="about4" value="trbflxr#8814 lub John Sawyer#6915"/>
   <key id="about5" value="lub na discordzie modyfikacji (przycisk na górze)"/>
   <key id="about6" value="Poza tym, wielkie podziękowania dlaCursed, MRo oraz diip za ich wsparcie!"/>
-  <key id="about7" value="Modyfikacja przetłumaczona przez: John Sawyer (RU), Nawax (FR), Sleepy (PL), Gingy Bread (NL), Allicy (JP)"/>
+  <key id="about7" value="Modyfikacja przetłumaczona przez:"/>
   <key id="about0v" value="Twoja wersja gry jest nietypowa!"/>
   <key id="about1v" value="Proszę pobierz nową wersję modyfikacji KiNO"/>
   <key id="about2v" value="z oficjalnego discorda(top button)"/>
