--- a/KN_Core/Resources/Locale/ru.xml
+++ b/KN_Core/Resources/Locale/ru.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<locale loc="ru">
+<locale loc="ru" author="John Sawyer">
   <!--MODS (TABS)-->
   <key id="lights" value="СВЕТ"/>
   <key id="visuals" value="ВИЗУАЛ"/>
@@ -41,7 +41,7 @@
   <key id="about4" value="trbflxr#8814 или John Sawyer#6915"/>
   <key id="about5" value="или в дискорде мода (кнопка сверху)"/>
   <key id="about6" value="Так же большое спасибо игрокам Cursed, MRo и diip за их поддержку!"/>
-  <key id="about7" value="Мод перевели: John Sawyer (RU), Nawax (FR)"/>
+  <key id="about7" value="Мод перевели:"/>
   <key id="about0v" value="Ваша версия игры не соответсвует версии мода!"/>
   <key id="about1v" value="Пожалуйста, скачайте новую версию KiNO мода"/>
   <key id="about2v" value="из оффицального дискорда (кнопка сверху)"/>
