--- a/KN_Core/Resources/Locale/ru.xml
+++ b/KN_Core/Resources/Locale/ru.xml
@@ -21,7 +21,7 @@
   <key id="close" value="ЗАКРЫТЬ"/>
 
   <!--CORE-->
-  <key id="input_locked" value="УПРАВЛЕНИЕ ЗАБЛОКИРОВАНО. ЗАКРОЙ МОД, ЧТОБЫ РАЗБЛОКИРОВАТЬ УПРАВЛЕНИЕ."/>
+  <key id="input_locked" value="УПРАВЛЕНИЕ ЗАБЛОКИРОВАНО. ЗАКРОЙ МЕНЮ МОДА, ЧТОБЫ РАЗБЛОКИРОВАТЬ УПРАВЛЕНИЕ."/>
   <key id="changes" value="ИЗМЕНЕНИЯ"/>
   <key id="outdated0" value="МОД УСТАРЕЛ. СВЕЖАЯ ВЕРИЯ"/>
   <key id="outdated1" value="ЗАХОДИ К НАМ В ДИСКОРД ЗА НОВОСТЯМИ (ТЫК)"/>
