--- a/KN_Core/Resources/Locale/en.xml
+++ b/KN_Core/Resources/Locale/en.xml
@@ -43,12 +43,13 @@
   <key id="about5" value="or in the mod's discord (top button)"/>
   <key id="about6" value="Also many thanks to Cursed, MRo and diip for their support!"/>
   <key id="about7" value="Mod translated by:"/>
-  <key id="about0v" value="Your CarX client version is different!"/>
-  <key id="about1v" value="Please download new version of KiNO mod"/>
-  <key id="about2v" value="from official discord (top button)"/>
-  <key id="about3v" value="or contact us at trbflxr#8814 or John Sawyer#6915"/>
-  <key id="about4v" value="Current version"/>
-  <key id="about5v" value="Target version"/>
+  <key id="about0v" value="Your CarX client or mod version is different!"/>
+  <key id="about1v" value="Restart the game for the mod to update automatically."/>
+  <key id="about2v" value="If you still see this message after the restart then"/>
+  <key id="about3v" value="download and manually install the latest version of the mod"/>
+  <key id="about4v" value="from our discord (top button)"/>
+  <key id="about5v" value="Current version"/>
+  <key id="about6v" value="Target version"/>
 
   <!--SETTINGS-->
   <key id="tach" value="CUSTOM TACHOMETER"/>
