added missing lines to jp, nl and pl locales

--- a/KN_Core/Resources/Locale/jp.xml
+++ b/KN_Core/Resources/Locale/jp.xml
@@ -42,12 +42,13 @@
   <key id="about5" value="または mod のディスコード (上のボタン) から連絡してください"/>
   <key id="about6" value="以下の方々にも感謝しています Cursed, MRo と diip "/>
   <key id="about7" value="翻訳者 by:"/>
-  <key id="about0v" value="お使いのCarXクライアントのバージョンが違います"/>
-  <key id="about1v" value="KiNO modの新バージョンをダウンロードしてください。"/>
-  <key id="about2v" value="公式ディスコード（上ボタン）より"/>
-  <key id="about3v" value="または問い合わせ先 trbflxr#8814 or John Sawyer#6915"/>
-  <key id="about4v" value="現在のバージョン"/>
-  <key id="about5v" value="対象のバージョン"/>
+  <key id="about0v" value="お使いのCarXクライアントもしくはMODのバージョンが違います!"/>
+  <key id="about1v" value="MODが自動的に更新されるようゲームを再起動してください。"/>
+  <key id="about2v" value="再起動してもこのメッセージが表示される場合は"/>
+  <key id="about3v" value="最新バージョンのMODをダウンロードして手動でインストールしてください。"/>
+  <key id="about4v" value="最新バージョンのダウンロードはディスコード（上のボタン）から"/>
+  <key id="about5v" value="現在のバージョン"/>
+  <key id="about6v" value="対象のバージョン"/>
 
   <!--SETTINGS-->
   <key id="tach" value="カスタムタコメーター"/>
