--- a/KN_Core/Resources/Locale/jp.xml
+++ b/KN_Core/Resources/Locale/jp.xml
@@ -40,8 +40,9 @@
   <key id="about3" value="私たちに連絡してください"/>
   <key id="about4" value="trbflxr#8814 or John Sawyer#6915"/>
   <key id="about5" value="または mod のディスコード (上のボタン) から連絡してください"/>
-  <key id="about6" value="以下の方々にも感謝しています Cursed, MRo と diip "/>
-  <key id="about7" value="翻訳者 by:"/>
+  <key id="about6" value="以下の方々にも感謝しています"/>
+  <key id="about7" value=" "/>
+  <key id="about8" value="翻訳者 by:"/>
   <key id="about0v" value="お使いのCarXクライアントもしくはMODのバージョンが違います!"/>
   <key id="about1v" value="MODが自動的に更新されるようゲームを再起動してください。"/>
   <key id="about2v" value="再起動してもこのメッセージが表示される場合は"/>
