--- a/KN_Core/Resources/Locale/nl.xml
+++ b/KN_Core/Resources/Locale/nl.xml
@@ -40,8 +40,9 @@
   <key id="about3" value="Contacteer ons dan aub op"/>
   <key id="about4" value="trbflxr#8814 of John Sawyer#6915"/>
   <key id="about5" value="Of in de mods discord (bovenste knop)"/>
-  <key id="about6" value="Trouwens Cursed, MRo and diip heel erg bedankt voor de hulp!"/>
-  <key id="about7" value="Mod vertaald door:"/>
+  <key id="about6" value="Trouwens"/>
+  <key id="about7" value="heel erg bedankt voor de hulp!"/>
+  <key id="about8" value="Mod vertaald door:"/>
   <key id="about0v" value="Uw CarX client versie is anders!"/>
   <key id="about1v" value="Herstart het spel zodat de mod zich automatisch kan updaten."/>
   <key id="about2v" value="Als u did bericht nog steeds ziet na het heropstarten"/>
