--- a/KN_Core/Resources/Locale/pl.xml
+++ b/KN_Core/Resources/Locale/pl.xml
@@ -40,8 +40,9 @@
   <key id="about3" value="proszę, skontaktuj się z nami"/>
   <key id="about4" value="trbflxr#8814 lub John Sawyer#6915"/>
   <key id="about5" value="lub na discordzie modyfikacji (przycisk na górze)"/>
-  <key id="about6" value="Poza tym, wielkie podziękowania dlaCursed, MRo oraz diip za ich wsparcie!"/>
-  <key id="about7" value="Modyfikacja przetłumaczona przez:"/>
+  <key id="about6" value="Poza tym, wielkie podziękowania dla"/>
+  <key id="about7" value="za ich wsparcie!"/>
+  <key id="about8" value="Modyfikacja przetłumaczona przez:"/>
   <key id="about0v" value="Twoja wersja CarX jest nieznana"/>
   <key id="about1v" value="Zrestartuj grę żeby automatycznie zaaktualizować modyfikacje."/>
   <key id="about2v" value="Jeśli nadal widzisz tę wiadomość to"/>
