--- a/KN_Core/Resources/Locale/ita.xml
+++ b/KN_Core/Resources/Locale/ita.xml
@@ -41,8 +41,9 @@
   <key id="about3" value="puoi contattarci a"/>
   <key id="about4" value="trbflxr#8814 o John Sawyer#6915"/>
   <key id="about5" value="o nel KiNO Discord (Pulsante in alto)"/>
-  <key id="about6" value="Molte grazie anche a Cursed, MRo e diip per il loro supporto!"/>
-  <key id="about7" value="Mod tradotta da:"/>
+  <key id="about6" value="Molte grazie anche a"/>
+  <key id="about7" value="per il loro supporto!"/>
+  <key id="about8" value="Mod tradotta da:"/>
   <key id="about0v" value="La tua versione di CarX o della mod è diversa!"/>
   <key id="about1v" value="Riavvia il gioco per far aggiornare la mod automaticamente."/>
   <key id="about2v" value="Se questo messaggio è ancora visibile dopo il riavvio allora"/>
