--- a/KN_Core/Resources/Locale/ru.xml
+++ b/KN_Core/Resources/Locale/ru.xml
@@ -25,7 +25,8 @@
   <key id="input_locked" value="УПРАВЛЕНИЕ ЗАБЛОКИРОВАНО. ЗАКРОЙ МЕНЮ МОДА, ЧТОБЫ РАЗБЛОКИРОВАТЬ УПРАВЛЕНИЕ."/>
   <key id="changes" value="ИЗМЕНЕНИЯ"/>
   <key id="outdated0" value="МОД УСТАРЕЛ. СВЕЖАЯ ВЕРИЯ"/>
-  <key id="outdated1" value="ЗАХОДИ К НАМ В ДИСКОРД ЗА НОВОСТЯМИ (ТЫК)"/>
+  <key id="outdated1" value="ПЕРЕЗАПУСТИТЕ ИГРУ ДЛЯ АВТОМАТИЧЕСКОГО ОБНОВЛЕНИЯ."/>
+  <key id="outdated2" value="ЗАХОДИ К НАМ В ДИСКОРД ЗА НОВОСТЯМИ (ТЫК)"/>
 
   <!--PICKERS-->
   <key id="cp_cars" value="МАШИНЫ"/>
